# python-mister-fpga

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: api.md  changelog.md  index.md  usage.md
src/mister_fpga/: __init__.py  client.py  const.py  ra.py  ra_web.py  ssh.py  websocket.py
tests/: test_client.py  test_ra.py  test_ra_web.py  test_ssh.py  test_websocket.py
