[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-mister-fpga"
version = "0.1.3"
description = "Async Python client for the MiSTer FPGA mrext Remote API (REST + WebSocket) and SSH telemetry"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hudson Brendon", email = "contato.hudsonbrendon@gmail.com"}]
keywords = ["mister", "fpga", "mrext", "retro", "async", "aiohttp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["aiohttp>=3.9", "asyncssh>=2.21"]

[project.urls]
Homepage = "https://github.com/hudsonbrendon/python-mister-fpga"
Documentation = "https://hudsonbrendon.github.io/python-mister-fpga/"
Issues = "https://github.com/hudsonbrendon/python-mister-fpga/issues"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "aioresponses>=0.7", "ruff"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["src/mister_fpga"]

[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
